// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Paper Paper with elevation of 0 1`] = `
<div>
  <div
    className="MuiPaper-root MuiPaper-elevation0 MuiPaper-rounded"
  >
    <div
      style={
        Object {
          "padding": 40,
          "textAlign": "center",
        }
      }
    >
      <p
        className="MuiTypography-root undefined MuiTypography-body1"
      >
        This is a nice sheet of paper :)
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Paper Paper with elevation of 1 1`] = `
<div>
  <div
    className="MuiPaper-root MuiPaper-elevation1 makeStyles-elevation1-506 MuiPaper-rounded"
  >
    <div
      style={
        Object {
          "padding": 40,
          "textAlign": "center",
        }
      }
    >
      <p
        className="MuiTypography-root undefined MuiTypography-body1"
      >
        This is a nice sheet of paper :)
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Paper Paper with elevation of 2 1`] = `
<div>
  <div
    className="MuiPaper-root MuiPaper-elevation2 makeStyles-elevation2-363 MuiPaper-rounded"
  >
    <div
      style={
        Object {
          "padding": 40,
          "textAlign": "center",
        }
      }
    >
      <p
        className="MuiTypography-root undefined MuiTypography-body1"
      >
        This is a nice sheet of paper :)
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Paper Paper with elevation of 3 1`] = `
<div>
  <div
    className="MuiPaper-root MuiPaper-elevation3 makeStyles-elevation3-220 MuiPaper-rounded"
  >
    <div
      style={
        Object {
          "padding": 40,
          "textAlign": "center",
        }
      }
    >
      <p
        className="MuiTypography-root undefined MuiTypography-body1"
      >
        This is a nice sheet of paper :)
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Paper Paper with elevation of 4 1`] = `
<div>
  <div
    className="MuiPaper-root MuiPaper-elevation4 makeStyles-elevation4-77 MuiPaper-rounded"
  >
    <div
      style={
        Object {
          "padding": 40,
          "textAlign": "center",
        }
      }
    >
      <p
        className="MuiTypography-root undefined MuiTypography-body1"
      >
        This is a nice sheet of paper :)
      </p>
    </div>
  </div>
</div>
`;
